[gd_scene load_steps=10 format=2]

[ext_resource path="res://Audio/Player/jump.wav" type="AudioStream" id=1]
[ext_resource path="res://Audio/Terminal/keyboard_button.wav" type="AudioStream" id=2]
[ext_resource path="res://Audio/Terminal/keyboard_button_enter.wav" type="AudioStream" id=3]
[ext_resource path="res://Audio/UI/game_over.wav" type="AudioStream" id=4]
[ext_resource path="res://Audio/UI/hover_over.wav" type="AudioStream" id=5]
[ext_resource path="res://Audio/UI/next_screen.wav" type="AudioStream" id=6]
[ext_resource path="res://Audio/UI/error.wav" type="AudioStream" id=7]
[ext_resource path="res://Audio/UI/level_select.wav" type="AudioStream" id=8]
[ext_resource path="res://Scripts/Autoloads/Sounds.gd" type="Script" id=9]

[node name="Sounds" type="Node"]
pause_mode = 2
script = ExtResource( 9 )

[node name="Player" type="Node" parent="."]

[node name="jump" type="AudioStreamPlayer" parent="Player" groups=["sounds"]]
stream = ExtResource( 1 )
volume_db = -10.0

[node name="Terminal" type="Node" parent="."]

[node name="keyboard_button" type="AudioStreamPlayer" parent="Terminal" groups=["sounds"]]
stream = ExtResource( 2 )

[node name="keyboard_button_enter" type="AudioStreamPlayer" parent="Terminal" groups=["sounds"]]
stream = ExtResource( 3 )

[node name="UI" type="Node" parent="."]

[node name="error" type="AudioStreamPlayer" parent="UI" groups=["sounds"]]
stream = ExtResource( 7 )

[node name="game_over" type="AudioStreamPlayer" parent="UI" groups=["sounds"]]
stream = ExtResource( 4 )

[node name="hover_over" type="AudioStreamPlayer" parent="UI" groups=["sounds"]]
stream = ExtResource( 5 )

[node name="level_select" type="AudioStreamPlayer" parent="UI" groups=["sounds"]]
stream = ExtResource( 8 )

[node name="next_screen" type="AudioStreamPlayer" parent="UI" groups=["sounds"]]
stream = ExtResource( 6 )
